--- a/DS AI.html
+++ b/DS AI.html
@@ -12,8 +12,8 @@
 <body>
 	<nav id="menu">
 		<ul>
-			<li><a href="#menu">&#9776;</a></li>
-			<li><a href="#">x</a></li>
+			<li><a href="#menu">Menu</a></li>
+			<li><a href="#about">About</a></li>
 			<li><a href="#start">Start</a></li>
 			<li><a href="#services">Services</a>
 				<div class="dropdown">
