Changed mail info

--- a/DS AI.html
+++ b/DS AI.html
@@ -74,7 +74,7 @@
 			<a href="https://www.facebook.com/" target="_blank"><img src="img/facebook.png"></a>
 			<a href="https://www.twitter.com/" target="_blank"><img src="img/twitter.png"></a>
 			<a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png"></a>
-			<p>Coded by STIFLER-XD<br><a href="mailto:matias.perez.mcd@gmail.com">E-mail me!</a></p>
+			<p>Coded by Hill<br><a href="mailto:matias.perez.mcd@gmail.com">Mail Me</a></p>
 		</div>
 	</footer>
 </body>
