--- a/DS AI.html
+++ b/DS AI.html
@@ -42,7 +42,13 @@
 	</header>
 	
 	<section id="inicio">
-		<p>It is important to take care of the patient, to be followed by the patient, but it will happen at such a time that there is a lot of work and pain. For to come to the smallest detail, no one should practice any kind of work unless he derives some benefit from it. Do not be angry with the pain in the reprimand in the pleasure he wants to be a hair from the pain in the hope that there is no breeding. Unless they are blinded by lust, they do not come forth; they are in fault who abandon their duties and soften their hearts, that is, their labors.</p>
+		<p>About Us: 
+
+			<br><h3>NIMS University Data Science and Artificial Intelligence Club</h3><br>
+
+			Welcome to the NIMS University Data Science and Artificial Intelligence (DSAI) Club! 
+			
+			Our mission is to create a vibrant community of data enthusiasts, AI aficionados, and tech visionaries.</p>
 	</section>
 	
 	<div id="acerca">
@@ -53,20 +59,31 @@
 	<aside id="servicios">
 		<article class="shadowed">
 			<img src="img/consoles2.jpg"><br><br><hr><br>
-			<p>It is important to take care of the patient, to be followed by the patient, but it will happen at such a time that there is a lot of work and pain.</p>
+			<p>Exploration and Learning:<br>
+				We dive deep into the realms of data science and AI, unraveling the mysteries of algorithms, models, and predictive analytics.
+				Workshops, seminars, and hackathons are our playgrounds for continuous learning.</p>
 		</article><br>
 		<article class="shadowed">
 			<img src="img/joysticks.jpg"><br><br><hr><br>
-			<p>For to come to the smallest detail, no one should practice any kind of work unless he derives some benefit from it.</p>
+			<p>Collaboration and Innovation:<br>
+				We believe in the power of collaboration. Together, we brainstorm, code, and innovate.
+				Whether it’s building chatbots, analyzing datasets, or creating neural networks, we thrive on collective brilliance.</p>
 		</article><br>
 		<article class="shadowed">
 			<img src="img/snes.jpg"><br><br><hr><br>
-			<p>Do not be angry with the pain in the reprimand in the pleasure he wants to be a hair from the pain in the hope that there is no breeding.</p>
+			<p>Real-World Applications:<br>
+				Theory is essential, but we’re all about practicality. Our club bridges the gap between academia and industry.
+				From predicting stock prices to enhancing healthcare diagnostics, we explore how data and AI transform the world.</p>
 		</article><br>
 	</aside>
 
 	<div id="contacto">
-		<p align = "center" id="Contact For"> Unless they are blinded by lust, they do not come forth; they are in fault who abandon their duties and soften their hearts, that is, their labors.</p>
+		<p align = "center" id="Contact For">Join us on this exhilarating journey! Let’s decode data, train models, and shape the future together. 🚀🔍🤖
+
+	<br>
+			Remember, at NIMS DSAI Club, we don’t just analyze data; we create possibilities! 📊🌐</p>
+			
+			
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3549.0013622431147!2d75.95063507535023!3d27.187693976484383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396da70cb0cb7cb7%3A0xf3f4ac649c8fcff6!2sNIMS%20University%20Engineering%20College!5e0!3m2!1sen!2sin!4v1711084537727!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 	</div>	
 	<footer>
@@ -74,7 +91,7 @@
 			<a href="https://www.facebook.com/" target="_blank"><img src="img/facebook.png"></a>
 			<a href="https://www.twitter.com/" target="_blank"><img src="img/twitter.png"></a>
 			<a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png"></a>
-			<p>Coded by Hill<br><a href="mailto:matias.perez.mcd@gmail.com">Mail Me</a></p>
+			<p>Coded by Hill<br><a href="dsaiclub.nimsuniversity@gmail.com">Mail Me</a></p>
 		</div>
 	</footer>
 </body>
