--- a/DS AI.html
+++ b/DS AI.html
@@ -53,24 +53,24 @@
 	
 	<div id="acerca">
 			<p>It is important to take care of the patient, to be followed by the patient, but it will happen at such a time that there is a lot of work and pain.</p>
-			<img src="img/gameboy.png">
+			<img src="img/gameboy2.jpg">
 	</div>
 	
 	<aside id="servicios">
 		<article class="shadowed">
-			<img src="img/consoles2.jpg"><br><br><hr><br>
+			<img src="img/CONSOLE.jpg"><br><br><hr><br>
 			<p>Exploration and Learning:<br>
 				We dive deep into the realms of data science and AI, unraveling the mysteries of algorithms, models, and predictive analytics.
 				Workshops, seminars, and hackathons are our playgrounds for continuous learning.</p>
 		</article><br>
 		<article class="shadowed">
-			<img src="img/joysticks.jpg"><br><br><hr><br>
+			<img src="img/CONSOLE2.jpg"><br><br><hr><br>
 			<p>Collaboration and Innovation:<br>
 				We believe in the power of collaboration. Together, we brainstorm, code, and innovate.
 				Whether it’s building chatbots, analyzing datasets, or creating neural networks, we thrive on collective brilliance.</p>
 		</article><br>
 		<article class="shadowed">
-			<img src="img/snes.jpg"><br><br><hr><br>
+			<img src="img/CONSOLE3.jpg"><br><br><hr><br>
 			<p>Real-World Applications:<br>
 				Theory is essential, but we’re all about practicality. Our club bridges the gap between academia and industry.
 				From predicting stock prices to enhancing healthcare diagnostics, we explore how data and AI transform the world.</p>
