basic font changes

--- a/DS AI.html
+++ b/DS AI.html
@@ -13,30 +13,31 @@
 	<nav id="menu">
 		<ul>
 			<li><a href="#menu">Menu</a></li>
-			<li><a href="#about">About</a></li>
-			<li><a href="#start">Start</a></li>
-			<li><a href="#services">Services</a>
+			<li><a href="#blogs">Blogs</a></li>
+			<li><a href="#start" style="font-size: 130%;">Start</a></li>
+			<li><a href="#about" style="font-size: 130%;">About</a>
 				<div class="dropdown">
 					<p><a href="#">Us</a></p>
 					<p><a href="#">Our Mission</a></p>
-					<p><a href="#">History</a></p>
+					<p><a href="#">Events</a></p>
 				</div>	
 			</li>
-			<li><a href="#about">About</a>
+			<li><a href="#about"  style="font-size: 130%;">Blogs
+			</a>
 				<div class="dropdown">
-					<p><a href="#">Sale</a></p>
-					<p><a href="#">Placement</a></p>
-					<p><a href="#">Repair</a></p>
-					<p><a href="#">Requests</a></p>
+					<p><a href="#">Events</a></p>
+					<p><a href="#">Committe Members</a></p>
+					<p><a href="#">Inquiry</a></p>
+					
 				</div>	
 			</li>
-			<li><a href="#contact">Contact</a></li>
+			<li><a href="#contact" style="font-size: 130%;">Contact</a></li>
 		</ul>
 	</nav>
 
 	<header class="parallax">
 		<div>
-			<h1>DS AI CLUB</h1>
+			<h1>Data Science and AI CLUB</h1>
 			<h2>NIMS University</h2>
 		</div>	
 	</header>
@@ -91,7 +92,7 @@
 			<a href="https://www.facebook.com/" target="_blank"><img src="img/facebook.png"></a>
 			<a href="https://www.twitter.com/" target="_blank"><img src="img/twitter.png"></a>
 			<a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png"></a>
-			<p>Coded by Hill<br><a href="dsaiclub.nimsuniversity@gmail.com">Mail Me</a></p>
+			<p>Coded by the students of AI/ML<br><a href="dsaiclub.nimsuniversity@gmail.com">Mail Me</a></p>
 		</div>
 	</footer>
 </body>
