2nd commit Hill

--- a/DS AI.html
+++ b/DS AI.html
@@ -46,13 +46,13 @@
 
 			<br><h3>NIMS University Data Science and Artificial Intelligence Club</h3><br>
 
-			Welcome to the NIMS University Data Science and Artificial Intelligence (DSAI) Club! 
+			<h4>Welcome to the NIMS University Data Science and Artificial Intelligence (DSAI) Club! 
 			
-			Our mission is to create a vibrant community of data enthusiasts, AI aficionados, and tech visionaries.</p>
+			Our mission is to create a vibrant community of data enthusiasts, AI aficionados, and tech visionaries.</h4></p>
 	</section>
 	
 	<div id="acerca">
-			<p>It is important to take care of the patient, to be followed by the patient, but it will happen at such a time that there is a lot of work and pain.</p>
+			<h4>The Data Science and AI Club at NIMS University serves as a dynamic platform for students passionate about the intersection of technology and data. Through workshops, seminars, and hands-on projects, members delve into the realms of artificial intelligence, machine learning, and data analytics. The club fosters a collaborative environment where students can exchange ideas, learn from each other, and explore emerging trends in the field. By organizing hackathons, guest lectures, and industry visits, the club aims to empower its members with practical skills and insights crucial for success in the rapidly evolving landscape of data science and AI. Join us and unlock the potential of data-driven innovation!</h4>
 			<img src="img/gameboy2.jpg">
 	</div>
 	
