changed index info at header

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="carousel-item active">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Welcome to <span>DS AI CLUB</span></h2>
-          <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+          <p class="animate__animated animate__fadeInUp">At DSAI Club, we unravel data’s secrets and breathe life into algorithms. From predictive models to neural networks, we’re the architects of AI’s future. Join us in decoding patterns, shaping innovation, and transforming data into impact!</p>
           <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
@@ -99,7 +99,7 @@
       <div class="carousel-item">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Data Science</h2>
-          <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+          <p class="animate__animated animate__fadeInUp">Data Science is the art of extracting knowledge from data. It combines statistics, programming, and domain expertise to analyze and interpret complex information. From predictive modeling to uncovering hidden patterns, data scientists transform raw data into actionable insights.</p>
           <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
@@ -108,7 +108,7 @@
       <div class="carousel-item">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Artificial Intelligence</h2>
-          <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+          <p class="animate__animated animate__fadeInUp">Artificial Intelligence is the fusion of science and technology, where machines simulate human intelligence. From natural language processing to autonomous vehicles, AI powers innovations that redefine our world. It’s the quest to make machines think, learn, and adapt—ushering in a new era of possibilities.</p>
           <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
