--- a/index.html
+++ b/index.html
@@ -134,32 +134,32 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box icon-box-pink">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href="">Exploration & Learning</a></h4>
+              <p class="description"><i class="bi bi-check2-circle"></i>Dive into data science and AI concepts.<br><i class="bi bi-check2-circle"></i>Workshops, hackathons, and continuous skill development.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box icon-box-cyan">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <h4 class="title"><a href="">Collaboration & Projects</a></h4>
+              <p class="description"><i class="bi bi-check2-circle"></i>Collaborate on real-world projects.<br><i class="bi bi-check2-circle"></i>Apply machine learning, NLP, and data visualization.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-green">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <h4 class="title"><a href="">Industry Insights</a></h4>
+              <p class="description"><i class="bi bi-check2-circle"></i>Connect with professionals.<br><i class="bi bi-check2-circle"></i>Stay updated on trends and innovations.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-blue">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4 class="title"><a href="">Community & Impact</a></h4>
+              <p class="description"><i class="bi bi-check2-circle"></i>Foster a supportive network.<br><i class="bi bi-check2-circle"></i>Use data to drive positive change.</p>
             </div>
           </div>
 
@@ -182,14 +182,14 @@
 
             <div class="icon-box">
               <div class="icon"><i class="bx bx-fingerprint"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href="">Pattern Recognition and Predictive Modeling</a></h4>
+              <p class="description">Data science involves recognizing patterns and trends in large datasets. By leveraging advanced statistical analysis and machine learning algorithms, data scientists can uncover insights and build predictive models. These models help organizations make informed decisions, optimize processes, and improve outcomes.</p>
             </div>
 
             <div class="icon-box">
               <div class="icon"><i class="bx bx-gift"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4 class="title"><a href="">Enhanced Decision Making and Predictions</a></h4>
+              <p class="description">AI systems analyze vast amounts of data, extract patterns, and make accurate predictions. Whether it’s predicting stock market trends, diagnosing diseases, or recommending personalized content, AI enhances decision-making processes.</p>
             </div>
 
           </div>
