--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
         <div class="section-title">
           <h2>Features</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>The Data Science and Artificial Intelligence (DSAI) Club aims to foster knowledge and passion in fields like artificial intelligence, machine learning, natural language processing, and geographic information systems. Their mission includes promoting research, education, and training in AI, DS, NLP, DL, RS, and GIS. The club hosts technical events, workshops, and discussions, creating a collaborative environment for students interested in these domains.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
