--- a/index.html
+++ b/index.html
@@ -212,19 +212,16 @@
             <img src="assets/img/features-1.svg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
+            <h3>The Data Science and Artificial Intelligence (DSAI) Club at NIMS University aims to:</h3>
+            
             <ul>
-              <li><i class="bi bi-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+              <li><i class="bi bi-check"></i> Inculcate in-depth knowledge</li>
+              <li><i class="bi bi-check"></i> Create a collaborative environment</li>
             </ul>
           </div>
         </div>
 
-        <div class="row" data-aos="fade-up">
+        <!--div class="row" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
             <img src="assets/img/features-2.svg" class="img-fluid" alt="">
           </div>
