--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         <ul>
           <li><a class="" href="index.html">Home</a></li>
           <li><a class="active" href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
+          <!--li><a href="services.html">Services</a></li-->
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="team.html">Team</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -299,13 +299,13 @@ Remember, at NIMS DSAI Club, we don’t just analyze data; we create possibiliti
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
+              <!--li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li-->
               <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <!--div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
@@ -314,7 +314,7 @@ Remember, at NIMS DSAI Club, we don’t just analyze data; we create possibiliti
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
-          </div>
+          </div-->
 
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
