--- a/services.html
+++ b/services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -9,14 +9,14 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
+  <!-- Favicons >
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
+  <!-- Google Fonts >
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
+  <!-- Vendor CSS Files >
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+  <!-- Template Main CSS File >
   <link href="assets/css/moderna.css" rel="stylesheet">
 
   <!-- =======================================================
@@ -34,19 +34,19 @@
   * Updated: Mar 17 2024 with Bootstrap v5.3.3
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  ======================================================== >
 </head>
 
 <body>
 
-  <!-- ======= Header ======= -->
+  <!-- ======= Header ======= >
   <header id="header" class="fixed-top d-flex align-items-center ">
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
         <h1 class="text-light"><a href="index.html"><span>DS AI CLUB</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>>
       </div>
 
       <nav id="navbar" class="navbar">
@@ -77,14 +77,14 @@
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav><!-- .navbar >
 
     </div>
-  </header><!-- End Header -->
+  </header><!-- End Header >
 
   <main id="main">
 
-    <!-- ======= Our Services Section ======= -->
+    <!-- ======= Our Services Section ======= >
     <section class="breadcrumbs">
       <div class="container">
 
@@ -99,7 +99,7 @@
       </div>
     </section><!-- End Our Services Section -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Services Section ======= >
     <section class="services">
       <div class="container">
 
@@ -139,9 +139,9 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section><!-- End Services Section >
 
-    <!-- ======= Why Us Section ======= -->
+    <!-- ======= Why Us Section ======= >
     <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
       <div class="container">
 
@@ -171,7 +171,7 @@
       </div>
     </section><!-- End Why Us Section -->
 
-    <!-- ======= Service Details Section ======= -->
+    <!-- ======= Service Details Section ======= >
     <section class="service-details">
       <div class="container">
 
@@ -230,7 +230,7 @@
       </div>
     </section><!-- End Service Details Section -->
 
-    <!-- ======= Pricing Section ======= -->
+    <!-- ======= Pricing Section ======= >
     <section class="pricing section-bg" data-aos="fade-up">
       <div class="container">
 
@@ -283,11 +283,11 @@
         </div>
 
       </div>
-    </section><!-- End Pricing Section -->
+    </section><!-- End Pricing Section>
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
+  <!-- ======= Footer ======= >
   <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
 
     <div class="footer-newsletter">
@@ -367,15 +367,15 @@
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/ >
         Designed by <a href="https://github.com/STiFLeR7">STiFLeR</a>
       </div>
     </div>
-  </footer><!-- End Footer -->
+  </footer><!-- End Footer >
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
+  <!-- Vendor JS Files >
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -385,9 +385,9 @@
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
+  <!-- Template Main JS File >
   <script src="assets/js/moderna.js"></script>
 
 </body>
 
-</html>
+</html-->
