--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h3>Welcome to the NIMS University Data Science and Artificial Intelligence (DSAI) Club! Our mission is to create a vibrant community of data enthusiasts, AI aficionados, and tech visionaries.</h3>
