Morning Testimonials Update

--- a/about.html
+++ b/about.html
@@ -202,63 +202,63 @@ Remember, at NIMS DSAI Club, we don’t just analyze data; we create possibiliti
       <div class="container">
 
         <div class="section-title">
-          <h2>Tetstimonials</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Testimonials</h2>
+          <p>Experts in the field of AI and Data Science have made significant contributions, showcased unparalleled accomplishments, and brought about unique innovations. Their work spans diverse backgrounds and impacts various domains, making them influential figures in the industry.</p>
         </div>
 
         <div class="testimonials-carousel swiper">
           <div class="swiper-wrapper">
             <div class="testimonial-item swiper-slide">
-              <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-              <h3>Saul Goodman</h3>
-              <h4>Ceo &amp; Founder</h4>
+              <img src="assets/img/testimonials/testimonials-1.1.jpg" class="testimonial-img" alt="">
+              <h3>Julie Sweet</h3>
+              <h4>Accenture CEO</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                “By adopting and scaling A.I., companies can transform themselves—and redefine their industries”
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
 
             <div class="testimonial-item swiper-slide">
-              <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-              <h3>Sara Wilsson</h3>
-              <h4>Designer</h4>
+              <img src="assets/img/testimonials/testimonials-2.2.jpg" class="testimonial-img" alt="">
+              <h3>Ali Ghodsi</h3>
+              <h4>Databricks CEO</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                We’re on the verge of an ‘intelligence revolution’
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
 
             <div class="testimonial-item swiper-slide">
-              <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-              <h3>Jena Karlis</h3>
-              <h4>Store Owner</h4>
+              <img src="assets/img/testimonials/testimonials-3.3.jpg" class="testimonial-img" alt="">
+              <h3>Sam Altman</h3>
+              <h4>Open AI CEO</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                AI will reshape society, acknowledges risks: 'A little bit scared of this'
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
 
             <div class="testimonial-item swiper-slide">
-              <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-              <h3>Matt Brandon</h3>
-              <h4>Freelancer</h4>
+              <img src="assets/img/testimonials/testimonials-4.4.png" class="testimonial-img" alt="">
+              <h3>Larry Ellison</h3>
+              <h4>Oracle CEO</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                “What comes next is a wordwide race to build what comes next, to build better AI"
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
 
             <div class="testimonial-item swiper-slide">
-              <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-              <h3>John Larson</h3>
-              <h4>Entrepreneur</h4>
+              <img src="assets/img/testimonials/testimonials-5.5.jpg" class="testimonial-img" alt="">
+              <h3>Elon Musk</h3>
+              <h4>XCorp, Tesla CEO & Founder</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                “AI is a rare case where I think we need to be proactive in regulation than be reactive”
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
