Addition of Images in Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
         <ul>
           <li><a class="" href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
+          <!--li><a href="services.html">Services</a></li-->
           <li><a class="active" href="portfolio.html">Portfolio</a></li>
           <li><a href="team.html">Team</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -118,11 +118,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-wrap filter-app">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-1.1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h3>App 1</h3>
+                <h3>AI</h3>
                 <div>
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-1.1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -131,11 +131,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-wrap filter-web">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-2.2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h3>Web 3</h3>
+                <h3>AI</h3>
                 <div>
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-2.2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -144,11 +144,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-wrap filter-app">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-3.3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h3>App 2</h3>
+                <h3>AI</h3>
                 <div>
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-3.3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -157,11 +157,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-wrap filter-card">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-4.4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h3>Card 2</h3>
+                <h3>Data Science</h3>
                 <div>
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-4.4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -170,11 +170,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-wrap filter-web">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-5.5.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h3>Web 2</h3>
+                <h3>Data Science</h3>
                 <div>
-                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-5.5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -183,11 +183,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-wrap filter-app">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-6.6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h3>App 3</h3>
+                <h3>Data Science</h3>
                 <div>
-                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-6.6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -196,11 +196,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-wrap filter-card">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-7.7.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h3>Card 1</h3>
+                <h3>Back-Stage Spoilers</h3>
                 <div>
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-7.7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -209,11 +209,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-wrap filter-card">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-8.8.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h3>Card 3</h3>
+                <h3>Back-Stage Spoilers</h3>
                 <div>
-                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-8.8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -222,11 +222,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-wrap filter-web">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-9.9.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h3>Web 1</h3>
+                <h3>Back-Stage Spoilers</h3>
                 <div>
-                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-9.9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
