--- a/about.html
+++ b/about.html
@@ -54,11 +54,11 @@
           <li><a class="" href="index.html">Home</a></li>
           <li><a class="active" href="about.html">About</a></li>
           <!--li><a href="services.html">Services</a></li-->
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <!--li><a href="portfolio.html">Portfolio</a></li-->
           <li><a href="team.html">Team</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
+            <!--ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
@@ -72,7 +72,7 @@
               <li><a href="#">Drop Down 2</a></li>
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
-            </ul>
+            </ul-->
           </li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -300,8 +300,8 @@ Remember, at NIMS DSAI Club, we don’t just analyze data; we create possibiliti
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
               <!--li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li-->
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <!--li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li-->
+              <!--li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li-->
             </ul>
           </div>
 
