--- a/team.html
+++ b/team.html
@@ -108,18 +108,18 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-1.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <!--a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a-->
+                  <a href="https://www.linkedin.com/in/dr-jayant-jagtap-a6b559122/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
-                <p>Animi est delectus alias quam repellendus nihil nobis dolor. Est sapiente occaecati et dolore. Omnis aut ut nesciunt explicabo qui. Eius nam deleniti ut omnis repudiandae perferendis qui. Neque non quidem sit sed pariatur quia modi ea occaecati. Incidunt ea non est corporis in.</p>
+                <h4>Dr. Jayant Jagtap</h4>
+                <span>HOD - AI ML Dept.</span>
+                <p>An active researcher in the fields of Artificial Intelligence (AI), Machine Learning (ML), Deep Learning (DL), Pattern Recognition (PR), Medical Image Analysis (MIA), Digital Image Processing (DIP), and Computer Vision (CV). Skilled in programming platforms using Python and MATLAB. Strong education professional with a Doctor of Philosophy (Ph.D.) focused on Digital Image Processing and Pattern Recognition.</p>
               </div>
             </div>
           </div>
