addition of video file

--- a/index.html
+++ b/index.html
@@ -174,8 +174,13 @@
 
         <div class="row">
           <div class="col-lg-6 video-box">
-            <img src="assets/img/WHY-US2.jpg" class="img-fluid" alt="">
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+            <!--img src="assets/img/WHY-US2.jpg" class="img-fluid" alt=""-->
+            <!--a href="https://www.youtube.com/watch?v=ThRYF96HIzA" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a-->
+            <video width="650" height="500" controls autoplay muted loop>
+              <source src="assets\video\video1.mp4" type="video/mp4">
+              <source src="assets\video\video1.mp4" type="video/ogg">
+            Your browser does not support the video tag.
+            </video>
           </div>
 
           <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
