morning team updates

--- a/team.html
+++ b/team.html
@@ -155,9 +155,9 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-                <p>Ut enim possimus nihil cupiditate beatae. Veniam facere quae non qui necessitatibus rerum eos vero. Maxime sit sunt quo dolor autem est qui quaerat aliquid. Tenetur possimus qui enim.</p>
+                <h4>Sudarsh Chaturvedi</h4>
+                <span>President</span>
+                <p>Analytically minded with a passion for discerning and decoding complex problems into simple solutions. Self-motivated and Passionate about the full extent and efficiency to which either I or someone to whom I can delegate the apprehension of major technological aspects for an all-inclusive benefit.</p>
               </div>
             </div>
           </div>
