--- a/team.html
+++ b/team.html
@@ -127,7 +127,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-2.jpeg" class="img-fluid" alt="">
                 <div class="social">
                   <!--a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -136,9 +136,9 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
-                <p>Aspernatur iste esse aliquam enim et corporis. Molestiae voluptatem aut eligendi quis aut. Libero vel amet voluptatem eos rerum non doloremque. Dolores eum non.</p>
+                <h4>Dr. Nilesh Bhosale </h4>
+                <span>Associate Professor - AI ML Dept.</span>
+                <p>Experienced data science professional with strong statistical analytic capabilities and ability to work with a variety of data environment. Looking to obtain a Data Scientist position, to utilize data analysis and model development experience. Coming with strong programming experience, research experience and PhD degree in E & TC Engineering.</p>
               </div>
             </div>
           </div>
@@ -184,7 +184,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-5.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/" class="img-fluid" alt="">
                 <div class="social">
                   <!--a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -195,7 +195,7 @@
               <div class="member-info">
                 <h4>Purma Hamsika</h4>
                 <span>Vice President</span>
-                <p>Aut ex esse explicabo quia harum ea accusamus excepturi. Temporibus at quia quisquam veritatis impedit. Porro laborum voluptatum sed necessitatibus a saepe. Deserunt laborum quasi consequatur voluptatum iusto sint qui fuga vel. Enim eveniet sed quibusdam rerum in. Non dicta architecto consequatur quo praesentium nesciunt.</p>
+                <p>Student at NIMS University, Jaipur, Rajasthan</p>
               </div>
             </div>
           </div>
@@ -203,7 +203,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-6.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/" class="img-fluid" alt="">
                 <div class="social">
                   <!--a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -214,7 +214,7 @@
               <div class="member-info">
                 <h4>Sameer Alam</h4>
                 <span>Secretary</span>
-                <p>Amet labore numquam corrupti est. Nostrum amet voluptas consectetur dolor voluptatem architecto distinctio consequuntur eligendi. Quam impedit enim aut nesciunt aut dicta quam exercitationem. Reprehenderit exercitationem magnam. Ullam similique ut voluptas totam nobis porro accusamus nulla omnis.</p>
+                <p>Student at  NIMS University, Jaipur, Rajasthan</p>
               </div>
             </div>
           </div>
