--- a/team.html
+++ b/team.html
@@ -132,7 +132,7 @@
                   <!--a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a-->
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/dr-nilesh-b-5766b4246/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
